Fixes an issue with errors data structures reference
