# lib/Api/ReservationApi.php
@@ -95,7 +95,7 @@ class ReservationApi
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return \HapiCommand\Model\CommandProgressStatusDto
+     * @return \HapiCommand\Model\CommandProgressStatus
      */
     public function cancelReservation($id, $body = null)
     {
@@ -113,11 +113,11 @@ class ReservationApi
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return array of \HapiCommand\Model\CommandProgressStatusDto, HTTP status code, HTTP response headers (array of strings)
+     * @return array of \HapiCommand\Model\CommandProgressStatus, HTTP status code, HTTP response headers (array of strings)
      */
     public function cancelReservationWithHttpInfo($id, $body = null)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->cancelReservationRequest($id, $body);
 
         try {
@@ -176,21 +176,21 @@ $responseBody = $response->getBody();
             switch ($e->getCode()) {
 case 200:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\CommandProgressStatusDto',
+                        '\HapiCommand\Model\CommandProgressStatus',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 400:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesNoChannelFound',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 401:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesUnauthorized',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
@@ -234,7 +234,7 @@ case 401:$data = ObjectSerializer::deserialize(
      */
     public function cancelReservationAsyncWithHttpInfo($id, $body = null)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->cancelReservationRequest($id, $body);
 
         return $this->client
@@ -384,7 +384,7 @@ $defaultHeaders = [];
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return \HapiCommand\Model\CommandProgressStatusDto
+     * @return \HapiCommand\Model\CommandProgressStatus
      */
     public function createReservation($body)
     {
@@ -401,11 +401,11 @@ $defaultHeaders = [];
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return array of \HapiCommand\Model\CommandProgressStatusDto, HTTP status code, HTTP response headers (array of strings)
+     * @return array of \HapiCommand\Model\CommandProgressStatus, HTTP status code, HTTP response headers (array of strings)
      */
     public function createReservationWithHttpInfo($body)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->createReservationRequest($body);
 
         try {
@@ -464,21 +464,21 @@ $responseBody = $response->getBody();
             switch ($e->getCode()) {
 case 200:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\CommandProgressStatusDto',
+                        '\HapiCommand\Model\CommandProgressStatus',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 400:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesNoChannelFound',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 401:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesUnauthorized',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
@@ -520,7 +520,7 @@ case 401:$data = ObjectSerializer::deserialize(
      */
     public function createReservationAsyncWithHttpInfo($body)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->createReservationRequest($body);
 
         return $this->client
@@ -661,7 +661,7 @@ $defaultHeaders = [];
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return \HapiCommand\Model\CommandProgressStatusDto
+     * @return \HapiCommand\Model\CommandProgressStatus
      */
     public function updateReservation($body)
     {
@@ -678,11 +678,11 @@ $defaultHeaders = [];
 *
      * @throws \HapiCommand\ApiException on non-2xx response
      * @throws \InvalidArgumentException
-     * @return array of \HapiCommand\Model\CommandProgressStatusDto, HTTP status code, HTTP response headers (array of strings)
+     * @return array of \HapiCommand\Model\CommandProgressStatus, HTTP status code, HTTP response headers (array of strings)
      */
     public function updateReservationWithHttpInfo($body)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->updateReservationRequest($body);
 
         try {
@@ -741,21 +741,21 @@ $responseBody = $response->getBody();
             switch ($e->getCode()) {
 case 200:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\CommandProgressStatusDto',
+                        '\HapiCommand\Model\CommandProgressStatus',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 400:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesNoChannelFound',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
                     break;
 case 401:$data = ObjectSerializer::deserialize(
                         $content,
-                        '\HapiCommand\Model\ResponsesUnauthorized',
+                        '\HapiCommand\Model\Error',
                         $e->getResponseHeaders()
                     );
                     $e->setResponseObject($data);
@@ -797,7 +797,7 @@ case 401:$data = ObjectSerializer::deserialize(
      */
     public function updateReservationAsyncWithHttpInfo($body)
     {
-        $returnType = '\HapiCommand\Model\CommandProgressStatusDto';
+        $returnType = '\HapiCommand\Model\CommandProgressStatus';
         $request = $this->updateReservationRequest($body);
 
         return $this->client
